# mega-snake

./: .gitignore  CLAUDE.md  README.md  branchCleanUp.sh  branchDetails.sh  combine.sh  config.properties  config_setup.ps1  config_setup.sh  gcloudSet.sh  gradleSet.sh  javaSet.sh  parse_remote_branches.py  preloadConfig.sh  product_info.code-workspace  pylintrc  pyproject.toml  remote_branch.py  setJavaGradle.sh  stuff.code-workspace  untrackGradleProps.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  pr-validation.yml
codename_snake/: __main__.py
codename_snake/config_environment/: create_working_env.py  gradle_set.py  graphql_schema.py  java_set.py  local_config.py  module.py
codename_snake/config_environment/models/: tools_version.py  vscode_input.py  vscode_launch.py  vscode_task.py
codename_snake/diff_tree/: module.py
codename_snake/gcloud/: parse_instances_deployment_id.py  parse_json_logs.py  sign.py
codename_snake/light_weight/: create_release.py  echo.py  jks_expired_certs.py  module.py  release.py  release_handler.py
codename_snake/remote_branches/: cleanup_remote_branches.py  details_remote_branches.py  module.py  remote_branch.py
codename_snake/util/: cli_group.py  formatting.py  props.py  util.py
offproject/codename_snake/gcloud/: sign.py
offproject/mega_snake/gcloud/: module.py  parse_instances_deployment_id.py  parse_json_logs.py  sign.py
offproject/tests/gcloud/: test_gcloud_module.py  test_parse_instances_deployment_id.py  test_sign.py
py/: __init__.py  __main__.py  constants.py  parse_remote_branches.py  pyproject.toml  remote_branch.py  sort_numbers.py
py/branch_cleanup/: __init__.py  module.py  parse_remote_branches.py
py/config_environment/: __init__.py  create_working_env.py  gcloud.py  gradle_set.py  graphql_schema.py  java_set.py  local_config.py  module.py  set_workspace.py  util.py
py/config_environment/models/: github_pr_queries.py  github_queries.py  log_viewer_watcher.py  tools_version.py  vscode_input.py  vscode_launch.py  vscode_task.py
py/create_release/: __init__.py  create.py  module.py  release.py  release_handler.py
py/diff_tree/: __init__.py  file_type.py  module.py
py/gcloud/: __init__.py  module.py  parse_instances_deployment_id.py  parse_json_logs.py  sign.py
py/light_weight/: create_release.py  echo.py  jks_expired_certs.py  module.py  release.py
py/parse_branch/: parse_remote_branches.py
py/remote_branches/: __init__.py  cleanup_remote_branches.py  details_remote_branches.py  module.py  parse_remote_branches.py
py/util/: __init__.py  cli_group.py  formatting.py  logger.py  parse_java_versions.py  props.py  remote_branch.py  sort_numbers.py  util.py
pyx/create_release/: release_handler.py
resources/: java-formatter.xml  props.json  tasks.json
src/: branchCleanUp.sh  branchDetails.sh  config.properties  diffTree.sh  expiredCertsJks.sh  formatting.sh  gradleSet.sh  instancesFromDeploymentId.sh  javaSet.sh  parseJsonLogs.sh  preloadConfig.sh  setEnv.sh  untrackGradleProps.sh
src/codename_snake/: __main__.py  config.properties  config_setup.ps1  config_setup.sh  constants.py
src/codename_snake/config_environment/: create_working_env.py  gradle_set.py  graphql_schema.py  java_set.py  local_config.py  module.py  util.py
src/codename_snake/config_environment/models/: log_viewer_watcher.py  tools_version.py  vscode_input.py  vscode_launch.py  vscode_task.py
src/codename_snake/diff_tree/: __init__.py  file_type.py  module.py
src/codename_snake/gcloud/: module.py
src/codename_snake/light_weight/: __init__.py  create_release.py  echo.py  module.py  release.py  release_handler.py  shell_init.py
src/codename_snake/pylint/: __init__.py  custom_checkers.py
src/codename_snake/remote_branches/: cleanup_remote_branches.py  details_remote_branches.py  module.py  parse_remote_branches.py  remote_branch.py
src/codename_snake/util/: __init__.py  cli_group.py  formatting.py  props.py  util.py
src/mega_snake/: __main__.py  config.properties  config_setup.ps1  config_setup.sh  constants.py
src/mega_snake/config_environment/: create_working_env.py  gradle_set.py  graphql_schema.py  java_set.py  local_config.py  maven_set.py  maven_setup.py  module.py  util.py
src/mega_snake/diff_tree/: module.py
src/mega_snake/light_weight/: create_release.py  echo.py  jks_expired_certs.py  module.py  release.py  release_handler.py  shell_init.py
src/mega_snake/remote_branches/: cleanup_remote_branches.py  details_remote_branches.py  module.py  parse_remote_branches.py  remote_branch.py
src/mega_snake/util/: cli_group.py  formatting.py  props.py  util.py
src/resources/: config.properties  java-formatter.xml  launch.json  logWatchers.json  props.json  tasks.json
src/tests/: config.properties  test.code-workspace  test_cli_commands_aliases.py  test_cli_entrypoint.py  test_main_and_diff_tree.py
src/tests/config_environment/: test_ce_util.py  test_config_environment_module.py  test_create_working_env.py  test_gradle_set.py  test_graphql_schema.py  test_java_set.py  test_local_config.py  test_maven_set.py  test_maven_setup.py
src/tests/gcloud/: test_parse_instances_deployment_id.py  test_sign.py
src/tests/gradle/: darwin.code-workspace  empty.code-workspace
src/tests/light_weight/: test_light_weight_helpers.py  test_light_weight_module.py  test_release_handler.py  test_shell_init.py
src/tests/maven/: bash_local_file.sh  darwin.code-workspace  empty.code-workspace  pom.xml
src/tests/remote_branches/: test_module.py  test_remote_branch_helpers.py  test_remote_branches_module.py
src/tests/resources/: config.properties
src/tests/test_util/: side_effect_wrapper.py  util_test.py
src/tests/util/: test_cli_group.py  test_formatting.py  test_props.py  test_props_helpers.py  test_util.py
tests/config_environment/models/: test_github_queries.py  test_tools_version.py  test_vscode_task.py
tests/gcloud/: test_sign.py
tests/light_weight/: test_release_handler.py
workspace_temp/: JavaList.md  abilities.md
(+20 files in other folders)
