[project]
name = "mega_snake"
version = "0.1.0"
description = "CLI automation platform for Java development in VS Code"
authors = [
    { name = "Morales Ortega, Carlos Alberto", email = "carlos.mor.ort@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroid==3.3.8",
    "click==8.1.7",
    "colorama==0.4.6",
    "directory-tree==1.0.0",
    "graphql-core==3.2.5",
    "jq==1.8.0",
    "json-spec==0.12.0",
    "jsoncomment==0.4.2",
    "pyperclip==1.9.0",
    "rich-click==1.8.5",
    "types-colorama==0.4.15.20240311",
    "virtualenv==20.27.1",
    "pytest-mock==3.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0.0",
    "pytest==8.3.4",
    "mypy==1.13.0",
    "mypy-extensions==1.0.0",
    "pytest-pylint>=0.21.0",
    "pytest-html>=4.1.1",
    "ruff>=0.1.0",
]

[project.scripts]
mgsnake = "mega_snake.__main__:cli"  # Asumiendo que 'cli' es tu función Grupo de click

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mega_snake"]

[tool.mypy]
python_version = "3.13"
disable_error_code = ["import-untyped"]
mypy_path = "./out"
exclude = [
    '\.venv/.*',
    '.+\.pyi',
    '/opt/.*',
    '.*/site-packages/.*',
    'workspace_temp/.*',
    'src/tests/.*',
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mega_snake --cov-report=term-missing --cov-report=html:coverage_html --cov-fail-under=95 --html=report.html"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/site-packages/*",
    # Add specific files to exclude
    "mega_snake/pylint/custom_checkers.py",
]

[tool.coverage.report]
exclude_also = ["\\s*TYPE_CHECKING:\\s*\\n\\s*from.*"]

[tool.ruff]
# Preserved the more permissive line length you had in pylint
line-length = 120


# Exclude large/irrelevant folders (equivalent to your flake8/pylint excludes)
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
    "*.egg-info",
    "node_modules",
    "workspace_temp",
    "src/tests",
]
include = ["src/**/*.py"]
[tool.ruff.lint]
select = ["E", "F", "D1", "ANN2"]
# Ignore pycodestyle checks you had in flake8
extend-ignore = [
    "E303", # too many blank lines
    "E701", # multiple statements on one line
]
